Add dx12core, dx12command and dx12texturemanager

--- a/D3DProject/D3DProject.vcxproj.filters
+++ b/D3DProject/D3DProject.vcxproj.filters
@@ -21,7 +21,13 @@
     <ClCompile Include="Window.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="dx12core.cpp">
+    <ClCompile Include="Directx12Core\dx12core.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Directx12Core\dx12command.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Directx12Core\dx12texturemanager.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -29,7 +35,13 @@
     <ClInclude Include="Window.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="dx12core.h">
+    <ClInclude Include="Directx12Core\dx12core.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Directx12Core\dx12command.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Directx12Core\dx12texturemanager.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
