--- a/D3DProject/D3DProject.vcxproj
+++ b/D3DProject/D3DProject.vcxproj
@@ -141,12 +141,16 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="dx12core.cpp" />
+    <ClCompile Include="Directx12Core\dx12core.cpp" />
+    <ClCompile Include="Directx12Core\dx12command.cpp" />
+    <ClCompile Include="Directx12Core\dx12texturemanager.cpp" />
     <ClCompile Include="Source.cpp" />
     <ClCompile Include="Window.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="dx12core.h" />
+    <ClInclude Include="Directx12Core\dx12core.h" />
+    <ClInclude Include="Directx12Core\dx12command.h" />
+    <ClInclude Include="Directx12Core\dx12texturemanager.h" />
     <ClInclude Include="Window.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
