--- a/D3DProject/D3DProject.vcxproj
+++ b/D3DProject/D3DProject.vcxproj
@@ -144,6 +144,8 @@
     <ClCompile Include="Directx12Core\dx12core.cpp" />
     <ClCompile Include="Directx12Core\dx12command.cpp" />
     <ClCompile Include="Directx12Core\dx12texturemanager.cpp" />
+    <ClCompile Include="Directx12Core\dx12buffermanager.cpp" />
+    <ClCompile Include="Directx12Core\dx12renderpipeline.cpp" />
     <ClCompile Include="Source.cpp" />
     <ClCompile Include="Window.cpp" />
   </ItemGroup>
@@ -151,6 +153,9 @@
     <ClInclude Include="Directx12Core\dx12core.h" />
     <ClInclude Include="Directx12Core\dx12command.h" />
     <ClInclude Include="Directx12Core\dx12texturemanager.h" />
+    <ClInclude Include="Directx12Core\stb_image.h" />
+    <ClInclude Include="Directx12Core\dx12buffermanager.h" />
+    <ClInclude Include="Directx12Core\dx12renderpipeline.h" />
     <ClInclude Include="Window.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
