--- a/D3DProject/D3DProject.vcxproj
+++ b/D3DProject/D3DProject.vcxproj
@@ -150,6 +150,7 @@
     <ClCompile Include="Directx12Core\dx12buffermanager.cpp" />
     <ClCompile Include="Directx12Core\dx12renderpipeline.cpp" />
     <ClCompile Include="Directx12Core\dx12rayobjectmanager.cpp" />
+    <ClCompile Include="Directx12Core\dx12raytracingrenderpipeline.cpp" />
     <ClCompile Include="JRaytracing.cpp" />
     <ClCompile Include="Source.cpp" />
     <ClCompile Include="Window.cpp" />
@@ -162,6 +163,7 @@
     <ClInclude Include="Directx12Core\dx12buffermanager.h" />
     <ClInclude Include="Directx12Core\dx12renderpipeline.h" />
     <ClInclude Include="Directx12Core\dx12rayobjectmanager.h" />
+    <ClInclude Include="Directx12Core\dx12raytracingrenderpipeline.h" />
     <ClInclude Include="JRaytracing.h" />
     <ClInclude Include="RayTracingShaderHeader.h" />
     <ClInclude Include="Window.h" />
