--- a/D3DProject/D3DProject.vcxproj
+++ b/D3DProject/D3DProject.vcxproj
@@ -151,6 +151,13 @@
     <ClCompile Include="Directx12Core\dx12renderpipeline.cpp" />
     <ClCompile Include="Directx12Core\dx12rayobjectmanager.cpp" />
     <ClCompile Include="Directx12Core\dx12raytracingrenderpipeline.cpp" />
+    <ClCompile Include="imgui\imgui.cpp" />
+    <ClCompile Include="imgui\imgui_demo.cpp" />
+    <ClCompile Include="imgui\imgui_draw.cpp" />
+    <ClCompile Include="imgui\imgui_impl_dx12.cpp" />
+    <ClCompile Include="imgui\imgui_impl_win32.cpp" />
+    <ClCompile Include="imgui\imgui_tables.cpp" />
+    <ClCompile Include="imgui\imgui_widgets.cpp" />
     <ClCompile Include="JRaytracing.cpp" />
     <ClCompile Include="Source.cpp" />
     <ClCompile Include="Window.cpp" />
@@ -164,6 +171,14 @@
     <ClInclude Include="Directx12Core\dx12renderpipeline.h" />
     <ClInclude Include="Directx12Core\dx12rayobjectmanager.h" />
     <ClInclude Include="Directx12Core\dx12raytracingrenderpipeline.h" />
+    <ClInclude Include="imgui\imconfig.h" />
+    <ClInclude Include="imgui\imgui.h" />
+    <ClInclude Include="imgui\imgui_impl_dx12.h" />
+    <ClInclude Include="imgui\imgui_impl_win32.h" />
+    <ClInclude Include="imgui\imgui_internal.h" />
+    <ClInclude Include="imgui\imstb_rectpack.h" />
+    <ClInclude Include="imgui\imstb_textedit.h" />
+    <ClInclude Include="imgui\imstb_truetype.h" />
     <ClInclude Include="JRaytracing.h" />
     <ClInclude Include="RayTracingShaderHeader.h" />
     <ClInclude Include="Window.h" />
